2015-07-07  Jean-Louis Martineau <martineau@zmanda.com>
	* device-src/rait-device.c, device-src/tape-device.c,
	  device-src/vfs-device.c: Typo.

2015-06-23  Jean-Louis Martineau <martineau@zmanda.com>
	* perl/Amanda/Util.swg: disable setenv_init.

2015-06-23  Jean-Louis Martineau <martineau@zmanda.com>
	* device-src/xfer-source-device.c (pull_buffer_impl): Call
	  device_read_block with a goot max_block value
	* perl/Amanda/Device.swg (verify_random_from_device): Call
	  device_read_block with a max_block of -1

2015-06-23  Jean-Louis Martineau <martineau@zmanda.com>
	* application-src/amgtar.c: Use g_ascii_strtoull.

2015-06-22  Jean-Louis Martineau <martineau@zmanda.com>
	* perl/Amanda/Xfer.swg: break potential reference loop

2015-06-19  Jean-Louis Martineau <martineau@zmanda.com>
	* server-src/amidxtaped.pl: Temporary fix for protocol bug.

2015-06-19  Jean-Louis Martineau <martineau@zmanda.com>
	* recover-src/extract_list.c: Fix if not an application

2015-06-19  Jean-Louis Martineau <martineau@zmanda.com>
	* ndmp-src/ndma_data.c: Undo patch.
	* recover-src/extract_list.c: Fix compilation

2015-06-18  Jean-Louis Martineau <martineau@zmanda.com>
	* server-src/dumper.c: Fix compilation

2015-06-18  Jean-Louis Martineau <martineau@zmanda.com>
	* xfer-src/source-file.c: Fix compilation

2015-06-18  Jean-Louis Martineau <martineau@zmanda.com>
	* xfer-src/dest-application.c, xfer-src/source-file.c: Add files

2015-06-18  Jean-Louis Martineau <martineau@zmanda.com>
	* Implement DAR (Direct Access Recovery)

2015-06-16  Jean-Louis Martineau <martineau@zmanda.com>
	* perl/Amanda/Changer/robot.pm (verify_unlocked): Reload the state and
	  use eject_unload

2015-06-15  Jean-Louis Martineau <martineau@zmanda.com>
	* application-src/ampgsql.pl: Take another tar of ./pg_tblspc by
	  keeping the symlink.

2015-06-10  Jean-Louis Martineau <martineau@zmanda.com>
	* device-src/ndmp-device.c: On recovery, set initial window to (0, -1)